--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1 {
   padding: 10px 5px;
   height: 70%;
   display: grid;
+  /* display: none; */
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: repeat(3,1fr);
   /* border: var(--BORDER); */
@@ -116,4 +117,22 @@ h1 {
       opacity: 0.85;
     }
   }
+}
+
+.difficulty {
+  border: var(--BORDER);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  gap: 10px;
+  button {
+    background-color: aqua;
+    width: 100%;
+    font-size: .9em;
+    text-align: center;
+  }
+}
+
+.win {
+  background-color: blue;
 }
